# rs-ai

./: .gitignore  Cargo.toml  README.md
agent-tools/: Cargo.toml
agent-tools/src/: main.rs
chat-repl/: Cargo.toml
chat-repl/src/: main.rs
rag/: Cargo.toml
rag/src/: main.rs
