[workspace]
resolver="3"
members = ["chat-repl", "rag"]

[workspace.dependencies]
anyhow = "~1.0"
dotenvy = "~0.15"
env_logger = "~0.11"
log = "~0.4"
rustyline = "~17.0"
tokio = { version = "~1.49", features = ["macros", "rt-multi-thread"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
