[workspace]
resolver="3"
members = ["agent-tools","chat-repl", "rag"]

[workspace.dependencies]
anyhow = "~1.0"
dotenvy = "~0.15"
env_logger = "~0.11"
log = "~0.4"
rig-core = { version = "~0.31" }
rustyline = "~17.0"
serde = { version = "~1.0", features = ["derive"] }
tokio = { version = "~1.49", features = ["macros", "rt-multi-thread"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
