[package]
name = "rag"
version = "0.1.0"
edition = "2024"
authors = ["Jorge D. Ortiz-Fuentes"]
description = "Starting point for implementing RAG using Rig"
readme = "../README.md"
repository = "https://github.com/jdortiz/rs-ai"
license = "Apache-2.0"
keywords = ["ai"]

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rig-core = { version = "~0.31", features = ["derive"] }
rustyline = { workspace = true }
serde = { version = "~1.0", features = ["derive"] }
tokio = { workspace = true }
ulid = { version = "1.2.1", features = ["serde"] }

[features]
open-ai-api = []

[lints]
workspace = true
